test/corpus/jetbrains/DynamicReceiver.txt
==================
DynamicReceiver
==================

// COMPILATION_ERRORS

fun dynamic.foo()
fun dynamic?.foo()
val dynamic.foo: Int
val dynamic?.foo: Int

val foo: dynamic.() -> Unit

// testing look-ahead with comments and whitespace

fun dynamic . foo()
fun dynamic
        .foo()
fun dynamic// line-comment
        .foo()
fun dynamic/*
*/.foo()

---

(source_file
  (line_comment)
  (function_declaration
    receiver: (receiver_type)
    name: (simple_identifier)
    parameters: (function_value_parameters))
  (function_declaration
    receiver: (receiver_type
      type: (nullable_type
        (quest)))
    name: (simple_identifier)
    parameters: (function_value_parameters))
  (property_declaration
    (binding_pattern_kind)
    receiver: (receiver_type)
    variable: (variable_declaration
      name: (simple_identifier)
      type: (user_type
        name: (type_identifier))))
  (property_declaration
    (binding_pattern_kind)
    receiver: (receiver_type
      type: (nullable_type
        (quest)))
    variable: (variable_declaration
      name: (simple_identifier)
      type: (user_type
        name: (type_identifier))))
  (property_declaration
    (binding_pattern_kind)
    variable: (variable_declaration
      name: (simple_identifier)
      type: (function_type
        receiver: (receiver_type)
        parameters: (function_type_parameters)
        type: (user_type
          name: (type_identifier)))))
  (line_comment)
  (function_declaration
    receiver: (receiver_type)
    name: (simple_identifier)
    parameters: (function_value_parameters))
  (function_declaration
    receiver: (receiver_type)
    name: (simple_identifier)
    parameters: (function_value_parameters))
  (function_declaration
    receiver: (receiver_type)
    (line_comment)
    name: (simple_identifier)
    parameters: (function_value_parameters))
  (function_declaration
    receiver: (receiver_type)
    (multiline_comment)
    name: (simple_identifier)
    parameters: (function_value_parameters)))
