test/corpus/jetbrains/ExtensionsWithQNReceiver.txt
==================
ExtensionsWithQNReceiver
==================

// COMPILATION_ERRORS

val java.util.Map<*,*>.size : Int

fun java.util.Map<*,*>.size() : Int = 1

---

(source_file
  (line_comment)
  (property_declaration
    (binding_pattern_kind)
    receiver: (receiver_type
      type: (user_type
        name: (type_identifier)
        name: (type_identifier)
        name: (type_identifier)
        type_arguments: (type_arguments
          (type_projection)
          (type_projection))))
    variable: (variable_declaration
      name: (simple_identifier)
      type: (user_type
        name: (type_identifier))))
  (function_declaration
    receiver: (receiver_type
      type: (user_type
        name: (type_identifier)
        name: (type_identifier)
        name: (type_identifier)
        type_arguments: (type_arguments
          (type_projection)
          (type_projection))))
    name: (simple_identifier)
    parameters: (function_value_parameters)
    type: (user_type
      name: (type_identifier))
    body: (function_body
      (integer_literal))))
